<resources>
    <string name="app" translatable="false">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="poisk" translatable="false">Поиск</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="media" translatable="false">Медиатека</string>
    <string name="darkmode" translatable="false">Темная тема</string>
    <string name="share" translatable="false">Поделиться</string>
    <string name="support" translatable="false"> Написать в поддержку</string>
    <string name="documentation" translatable="false">Пользовательское соглашение</string>
    <string name="share_message" translatable="false">"https://practicum.yandex.ru/profile/android-developer/"</string>
    <string name="topic" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="context" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="contact" translatable="false">s.eglence@yandex.ru</string>
    <string name="agreement" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear_icon" translatable="false">Очистить</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="arrow_back" translatable="false">Обратная стрелка</string>
    <string name="arrow_forward" translatable="false">Стрелка вперед</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_wrong"> Проблемы со связью\n\nЗагрузка не удалась.  Проверьте\nподключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="error">Ошибка</string>
    <string name="text_separator">" • "</string>
    <string name="search_request">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="no_data_available">Нет данных</string>
    <string name="duration">Длительность</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="album">Альбом</string>
    <string name="name">Название*</string>
    <string name="favourites">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="no_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="even_track">%d трека</string>
    <string name="solo_track">%d трек</string>
    <string name="odd_track">%d треков</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="minutes">%d минут</string>
    <string name="minute">%d минута</string>
    <string name="minutes_s">%d минуты</string>
    <string name="description">Описание</string>
    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="save">Сохранить</string>
    <string name="create">Создать</string>





</resources>