<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button

            android:id="@+id/light_mode"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@null"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:outlineProvider="none"
            app:icon="@drawable/light_mode"
            app:iconTint="?attr/colorOnPrimary"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="@dimen/button_margin"
            android:text="@string/search"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/size22"
            tools:ignore="InefficientWeight,RtlHardcoded" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/button_margin"
            android:layout_marginVertical="@dimen/padding8"
            android:background="@drawable/cancel_icon"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="8dp"
            android:drawableTint="?attr/editTextColor"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="8dp"
            android:paddingStart="13dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/editTextColor"
            android:textCursorDrawable="@drawable/cursor"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck,RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize"></EditText>

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:paddingHorizontal="@dimen/padding12"
            android:paddingVertical="@dimen/margin10"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/clear_icon"
            android:scaleType="fitCenter"
            android:src="@drawable/cancel_button"
            android:visibility="invisible"
            app:tint="?attr/editTextColor"
            tools:ignore="RtlSymmetry"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/button_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/tracklist">
    </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/ErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ErrorImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/error" />

            <TextView
                android:id="@+id/ErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size16"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="19sp"
                android:textColor="?attr/colorOnPrimary"
                android:gravity="center" />

            <Button
                android:id="@+id/RefreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                android:backgroundTint="?attr/colorOnPrimary"
                app:cornerRadius="54dp"
                android:shadowRadius="0"
                android:text="@string/refresh"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="14sp"
                android:textAllCaps="false"

                />


        </LinearLayout>

<LinearLayout
    android:id ="@+id/searchHistoryLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">
    
    <TextView
        android:id="@+id/hintMessage"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/history_search"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="19sp"
        android:text="@string/search_request"
        android:textColor="?attr/colorOnPrimary"
        android:layout_gravity="center">
    </TextView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/tracklist" />

    <Button
        android:id="@+id/buttonClearHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:layout_gravity="center"
        app:cornerRadius="54dp"
        android:shadowRadius="0"
        android:text="@string/clear_history"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="14sp"
        android:textAllCaps="false"/>

</LinearLayout>


    </FrameLayout>


</LinearLayout>