<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/audiPlayerActivity"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".audioplayer.ui.AudioPlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <TextView
        android:id="@+id/tv_country"
        style="@style/LeftText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"

        />

    <TextView
        android:id="@+id/country_name"
        style="@style/RightText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_data_available"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_country"/>

    <TextView
        android:id="@+id/genre"
        style="@style/LeftText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/tv_country"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/genre_name"
        style="@style/RightText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_data_available"
        app:layout_constraintBaseline_toBaselineOf="@+id/genre"
        app:layout_constraintBottom_toTopOf="@id/country_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/genre"/>

    <TextView
        android:id="@+id/year"
        style="@style/LeftText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/year_name"
        style="@style/RightText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_data_available"
        app:layout_constraintBaseline_toBaselineOf="@+id/year"
        app:layout_constraintBottom_toTopOf="@id/genre_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/year"/>

    <TextView
        android:id="@+id/album"
        style="@style/LeftText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/album_name"
        style="@style/RightText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_data_available"
        app:layout_constraintBaseline_toBaselineOf="@+id/album"
        app:layout_constraintBottom_toTopOf="@id/year_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/album"

        />
    <TextView
        android:id="@+id/duration"
        style="@style/LeftText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/timing"
        style="@style/RightText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_data_available"
        app:layout_constraintBaseline_toBaselineOf="@+id/duration"
        app:layout_constraintBottom_toTopOf="@id/album_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/duration"/>

    <TextView
        android:id="@+id/playtracker"
        style="@style/RightText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="0:00"
        app:layout_constraintBottom_toTopOf="@id/duration"
        app:layout_constraintEnd_toEndOf="@+id/play"
        app:layout_constraintStart_toStartOf="@+id/play">
    </TextView>

    <ImageView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintBottom_toTopOf="@+id/playtracker"
        app:srcCompat="@drawable/play_icon"
        app:tint="?attr/colorOnPrimary" />

    <ImageView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toTopOf="@+id/play"
        app:srcCompat="@drawable/add_track" />

    <ImageView
        android:id="@+id/iv_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintTop_toTopOf="@+id/play"
        app:srcCompat="@drawable/like"/>


    <TextView
        android:id="@+id/artistName"
        style="@style/media_name"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginBottom="30dp"
        android:text="@string/nothing_found"
        android:textSize="@dimen/size14"
        app:layout_constraintBottom_toTopOf="@id/play"
        app:layout_constraintEnd_toEndOf="@id/iv_like"
        app:layout_constraintStart_toStartOf="@id/add"
        tools:ignore="MissingConstraints">

    </TextView>

    <TextView
        android:id="@+id/trackName"
        style="@style/media_name"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginTop="@dimen/size_24dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/nothing_found"
        android:textSize="@dimen/size22"
        app:layout_constraintEnd_toEndOf="@id/artistName"
        app:layout_constraintStart_toStartOf="@id/artistName"
        app:layout_constraintBottom_toTopOf="@id/artistName"
        tools:ignore="MissingConstraints">

    </TextView>

    <Button
        android:id="@+id/light_mode"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:outlineProvider="none"
        app:icon="@drawable/light_mode"
        app:iconTint="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


    <ImageView
        android:id="@+id/albumImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/size_24dp"
        android:scaleType="centerCrop"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/trackName"
        app:layout_constraintCircleRadius="@dimen/radius_8dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/light_mode"
        app:srcCompat="@drawable/placeholder">

    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>